@@ -3,6 +3,7 @@ Release history for Importer-Zim-Lexical
 
 {{$NEXT}}
 
+    - Produce DEBUG message with carp()
     - Depend on Importer::Zim::Utils 0.7.0
 
 v0.7     2017-09-28 09:48:28-07:00 America/Los_Angeles
